# mypy-json-schema

./: .gitignore  README.md  deno.json  deps.ts
.github/workflows/: upstream-check.yml
.vim/: coc-settings.json
resources/mypy/: config_file.html
schemas/: mypy.json  pyproject.json
scripts/: mypy.ts  pyproject.ts
scripts/cli/: mod.ts
scripts/common/: mod.ts
testfile/: pyproject.toml
